--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,10 @@
     "@testing-library/user-event": "^12.5.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
     "react-scripts": "4.0.1",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "socket.io-client": "^2.3.0"
   },
   "scripts": {
